--- a/price-finder/package.json
+++ b/price-finder/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "price-finder",
+  "name": "price-finder-server",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
