--- a/price-finder/package.json
+++ b/price-finder/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "p-limit": "^5.0.0",
     "ws": "^8.17.0"
   }
